@@ -1,5 +1,13 @@
 2005-07-28  Sven Neumann  <sven@gimp.org>
 
+	* app/base/siox.[ch]: accept an offset between pixels and mask,
+	work only on the intersection rectangle.
+
+	* app/core/gimpdrawable-foreground-extract.c: pass the drawable
+	offsets to siox_foreground_extract().
+
+2005-07-28  Sven Neumann  <sven@gimp.org>
+
 	* app/base/siox.c: allow to enable some debug output.
 
 2005-07-27  Manish Singh  <yosh@gimp.org>
